Fix date range selector for charts on mobile

--- a/style.css
+++ b/style.css
@@ -838,11 +838,11 @@ footer a {
     }
 }
 
-@media (max-width: 600px) {
-
-}
-
 @media (max-width: 580px) {
+    .hide-s {
+        display: none !important;
+    }
+
     header #mobile-menu-button {
         display: block;
     }
@@ -892,6 +892,12 @@ footer a {
 
     #search-form #search-input {
         padding-right: 20%;
+    }
+
+    #infobox .hashing-distribution-chart-wrapper {
+        width: 100%;
+        height: 100%;
+        margin: auto;
     }
 
     .blocklist-cell.miner-address {
